# RIR_Project

./: .cursorrules  .gitignore  AGENTS.md  ARCHITECTURE.md  PROJECT_ARCHITECTURE.md  RIR_Project.ipynb  dataset.py  pyproject.toml  train.py
baseline/: README.md
src/rir_project/: __init__.py  data.py  loss.py  models.py  synthesis.py  trainer.py  utils.py
src/rir_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_architecture_upgrades.py  test_data_loss_trainer_contracts.py  test_seed_reproducibility.py
