[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rir_project"
version = "0.1.0"
description = "Physics-informed RIR generation framework"
authors = [{name = "User"}]
readme = "ARCHITECTURE.md"
license = {text = "MIT"}
dependencies = [
    "torch",
    "pandas",
    "numpy",
    "scipy",
]
